# gnslgbot

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  application.yml  avatar_fix.py  docker-compose.yml  improve_audio.py  main.py  pyproject.toml  render.yaml  requirements-docker.txt  requirements.txt  update_comments.py
attached_assets/: Pasted--1-Siguraduhin-na-naka-install-nang-maayos-ang-FFmpeg-Subukan-mong-i-install-ulit-ang-FFmpeg-gami-1743220691097.txt  Pasted--Edge-TTS-Lavalink-Next-Gen-Discord-TTS-Bot-2025-No-FFmpeg-required-Gamit-ang-Edge-TTS--1743221581464.txt  Pasted--Greetings-scheduler-started-Welcome-message-disabled-during-maintenance-Connecting-to-Lavalink-1743256056865.txt  Pasted--system-message-f-PRIVATE-BOT-SETUP-INFORMATION-HINDI-KAILANGAN-SABIHIN-PALAGI--1743234979984.txt  Pasted-2025-03-29-12-58-52-WARNING-discord-gateway-Shard-ID-None-heartbeat-blocked-for-more-than-30-second-1743253153238.txt  Pasted-2025-03-29-13-22-26-ERROR-discord-client-Ignoring-exception-in-on-ready-Traceback-most-recent-c-1743254709210.txt  Pasted-Ahh-Text-to-Speech-TTS-bot-pala-ginagawa-mo-Kung-ayaw-mo-nang-FFmpeg-setup-may-mga-alternatives-1743213875043.txt  Pasted-An-unexpected-error-occurred-while-connecting-Node-identifier-I6eIzoMHEkxs4qZ-uri-https-lavalink-1743255591194.txt  Pasted-What-You-Want-to-Do-You-want-to-change-the-names-of-the-users-in-a-Discord-server-or-any-platform--1743259453497.txt  Pasted-Yt-dlp-is-likely-to-be-blocked-for-IP-ranges-of-VPS-providers-I-tried-a-few-months-ago-on-digital-o-1743216272687.txt  (+2 more)
bot/: .cog.py.1y7n9o4CwzPuGBRdGUcdt~  (+16 more)
(+4 files in other folders)
