[tool.poetry]
name = "gnslgbot"
version = "0.1.0"
description = "A Discord bot with AI capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.5.1"
flask = "^3.1.0"
groq = "^0.18.0"
pynacl = "^1.5.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
